BlocklyDuino
=======================

0.8 2012/
------------------

make editor more user friendly

Feature: 

* generate arduino code in textarea, let ctrl+a can select correct source
* load source via url param in same site with such "url=xxx" syntax
* include 2 examples
* upload potentiometer control servo video http://www.youtube.com/watch?v=u2Fp0KpWxik

Credit: gasolin


0.7 2012/10/18
------------------
code name: SPACE

Story: refine bootstraping process

Feature: 

* promotion video http://www.youtube.com/watch?v=_swiyXcUvNY
* bootstraping sample blocks and document to easily custom blocks.

Change:

* update blockly till 10/18
* from blockly) Move include section always at top of the source file
* move delay block to Control blocks Panel
* move map block to Math blocks panel

fix:

* fix servo move block cascade input issue 

Credit: gasolin


0.6 2012/10/14
-----------------
code name: CASTLE

make BlocklyDuino public to github

Feature:

* code on github
* add grove_temporature_sensor block
* add Serial print block

Change:

* map function can specify the max range value

Refactor:

Fix:

* fix several functions to able to assigned to variables

Credit: gasolin


0.5 2012/10/11
-----------------
code name: CREATOR

support int variables and new blockly syntax

Feature:

* support variable declare statement
* support type declaration for strong type language
  * (currently only support int type)
* can restore blocks
* add for statement

Refactor:

* add board profiles to support different board with ports(current arduino standard-compatible board only)
* support new blockly syntax
* change image size to 64*64

Credit: gasolin


0.4 2012/10/6
-----------------
code name: CITY

First version with minimum function sets.

Feature:

* Compact Digital/Analog Read/Write syntax
* Auto setup pinMode
* delay and map function
* 2 Standard blocks: Build-in LED, Servo 
* 6 Grove blocks: LED, Potentiometer, Tilt switch, Piezo Buzzer, Relay

Credit: gasolin


License