@@ -15,7 +15,7 @@ Blockly.Language.custom_read = {
     this.setColour(230);
 	this.appendDummyInput("")
 	    .appendTitle("CustomRead PIN#")
-	    .appendTitle(new Blockly.FieldDropdown(profile.arduino.digital), "PIN");
+	    .appendTitle(new Blockly.FieldDropdown(profile.default.digital), "PIN");
     this.setOutput(true, Boolean);
     this.setTooltip('input block');
   }
@@ -30,7 +30,7 @@ Blockly.Language.custom_write = {
 	this.appendDummyInput("")
 	    .appendTitle("CustomWrite PIN#")
 	    .appendTitle(new Blockly.FieldImage("http://www.seeedstudio.com/wiki/images/thumb/e/e0/LED1.jpg/400px-LED1.jpg", 64, 64))
-	    .appendTitle(new Blockly.FieldDropdown(profile.arduino.analog), "PIN")
+	    .appendTitle(new Blockly.FieldDropdown(profile.default.analog), "PIN")
 	    .appendTitle("value");
 	this.appendValueInput("NUM", Number);
 	this.setInputsInline(true);
